java.hints/test/unit/data/goldenfiles/org/netbeans/modules/java/hints/errors/ErrorHintsTest/testCreateField8.pass
package org.netbeans.test.java.hints;

import org.netbeans.test.java.hints.CreateField8.T;

public class CreateField8<T> {
    
    public void test(T data) {
        this.data = data;
    }
private T data;
}
